src-tauri/libs/libbloom.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package command-line-arguments */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "gateway.go"

#include <stdlib.h>

typedef void (*chats_callback_t)(const char* json_data);
typedef void (*messages_callback_t)(const char* json_data);

static inline void call_chats_callback(chats_callback_t cb, const char* json_data) {
    if (cb != NULL) {
        cb(json_data);
    }
}

static inline void call_messages_callback(messages_callback_t cb, const char* json_data) {
    if (cb != NULL) {
        cb(json_data);
    }
}

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern char* InitClient(char* baseURL, char* wsURL, char* storagePath, unsigned char* encKey, int keyLen);
extern void FreeString(char* p);
extern char* Register(void);
extern char* Login(char* recoveryKey);
extern char* RestoreSession(void);
extern void ClearCredentials(void);
extern char* GetMe(void);
extern char* SearchUsers(char* query);
extern char* EditUser(char* username, char* displayName, char* description, int hasUsername, int hasDisplayName, int hasDescription);
extern char* GetUser(char* userID);
extern char* CreateChat(char* userID, char* mlKem768Key, char* x448Key, char* ed448Key);
extern char* GetChats(void);
extern char* GetLocalChats(void);
extern char* SendMessage(int chatID, int replyToID, char* content);
extern char* LoadMessages(int chatID, int beforeID);
extern char* StartExchangeSession(char* exchangeType);
extern char* Exchange(char* exchangeType, char* roomID, char* fingerprint);
extern void CancelExchange(void);
extern void RegisterChatsCallback(chats_callback_t cb);
extern void UnregisterChatsCallback(void);
extern void RegisterMessagesCallback(messages_callback_t cb);
extern void UnregisterMessagesCallback(void);

#ifdef __cplusplus
}
#endif